# contracts.near-linkdrop

./: .gitignore  Cargo.toml  README.md
common/src/: lib.rs
contracts/common/: Cargo.toml
contracts/linkdrop/: Cargo.toml
contracts/near-campaign/: Cargo.toml
contracts/nft-campaign/: Cargo.toml
contracts/user/: Cargo.toml  README.md
contracts/user_creator/: Cargo.toml
linkdrop/: Cargo.toml
linkdrop/scripts/: deploy_wasm.cmd  upload_dev_wasm.cmd
linkdrop/src/: create_user_account.rs  lib.rs
migrations/user_1-0-0_to_2-0-0/: Cargo.toml
near-campaign/: Cargo.toml  README.md
near-campaign/scripts/: build_wasm.cmd  upload_dev_wasm.cmd
near-campaign/src/: add_keys.rs  claim.rs  clear_state.rs  create_account_and_claim.rs  delete_keys.rs  get_campaign.rs  get_campaign_metadata.rs  get_key_balance.rs  get_keys.rs  lib.rs  new.rs  refund_keys.rs
scripts/build_wasm/: all_contracts.sh  near_campaign.sh  nft_campaign.sh  nft_campaign_creator.sh  user.sh  user_1-0-0_to_2-0-0.sh  user_creator.sh
tests/: main.rs
tests/sim/: add_existing_keys.rs  add_keys_clear_and_delete_campaign.rs  add_max_keys_amount_per_one_call.rs  add_multiple_keys.rs  add_one_key.rs  claim_non_existing_account.rs  claim_one_link.rs  clear_multiple_keys.rs  clear_non_existing_keys.rs  create_account_and_claim_that_already_exists.rs  create_near_campaign.rs  create_near_campaign_2.rs  create_near_campaign_incorrect_name.rs  create_one_account.rs  create_one_account_and_claim.rs  create_user.rs  create_user_name_is_already_exists.rs  create_user_not_enough_balance.rs  create_user_panics_for_a_balance_exceeded.rs  create_user_with_low_gas.rs  delete_campaign_with_active_keys.rs  dev_test.rs  main.rs  refund_inactive_or_non_existing_keys.rs  refund_multiple_keys.rs  utils.rs  (+1 more)
user/: Cargo.toml
wasm/: linkdrop.wasm  near_campaign.wasm  nft_campaign.wasm  nft_campaign_creator.wasm  user.wasm  user_1-0-0_to_2-0-0.wasm  user_creator.wasm
(+189 files in other folders)
