[package]
name = "near-linkdrop"
version = "2.0.0"
authors = ["eclipseeer <eclipseeer@gmail.com>"]
edition = "2018"

[workspace]
members = [
  'contracts/common',
  'contracts/user_creator',
  'contracts/user',
  'contracts/campaigns/near_campaign',
  'contracts/campaigns/nft_campaign',
  'contracts/campaign_creators/nft_campaign_creator',
]

[dev-dependencies]
near-sdk = "4.0.0-pre.4"
near-sdk-sim = "4.0.0-pre.4"
near-crypto = "0.1.0"
user_creator = { path = "contracts/user_creator" }
user = { path = "contracts/user" }
near_campaign = { path = "contracts/campaigns/near_campaign" }
nft_campaign = { path = "contracts/campaigns/nft_campaign" }
nft_campaign_creator = { path = "contracts/campaign_creators/nft_campaign_creator" }
