[package]
name = "neardrop"
version = "2.0.0"
authors = ["eclipseeer <eclipseeer@gmail.com>"]
edition = "2018"

[workspace]
members = [
  'common',
  'contracts/user_creator',
  'contracts/user',
  'contracts/campaigns/near_campaign',
  'contracts/campaigns/nft_campaign',
  'migrations/user_1-0-0_to_2-0-0',
]

[dev-dependencies]
near-sdk = "4.0.0-pre.6"
near-sdk-sim = "4.0.0-pre.6"
near-crypto = "0.1.0"
user_creator = { path = "contracts/user_creator" }
user = { path = "contracts/user" }
near_campaign = { path = "contracts/campaigns/near_campaign" }
nft_campaign = { path = "contracts/campaigns/nft_campaign" }
